# libtool-coverage-sample

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
sample/: Makefile.am  greeter.c  greeter.h
test/: Makefile.am  test-greeter.c
